samples/_failures_safe/1761545047_e2c46e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7319d752.c: In function ‘main’:
./samples/SAFE/__tmp_7319d752.c:154:5: error: expected expression at end of input
  154 |     if (fgets(search_level, sizeof(search_level), stdin) != NULL)
      |     ^~
./samples/SAFE/__tmp_7319d752.c:154:5: error: expected declaration or statement at end of input
